Completed copy rough draft.

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@ permalink: /contact/
 tags: contact
 ---
 
+<h1>Let's get in touch!</h1>
+
 <div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
