Update cold-showers progress day 1

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -57,8 +57,7 @@ permalink: /cold-showers/
     <div class="day outer-month">29</div>
     <div class="day outer-month">30</div>
     <div class="day outer-month">31</div>
-    <!-- <div class="day">1<span class="completed"></span></div> -->
-    <div class="day">1</div>
+    <div class="day">1<span class="completed"></span></div>
     <div class="day">2</div>
     <div class="day">3</div>
     <div class="day">4</div>
