Update meta tags

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -1,6 +1,7 @@
 ---
 layout: center
 title: "30 Day Challenge: Cold Showers"
+meta_description: My public commitment to the 30 day cold shower challenge.
 permalink: /cold-showers/
 ---
 
