--- a/cold-showers.html
+++ b/cold-showers.html
@@ -60,8 +60,8 @@ permalink: /cold-showers/
     <div class="day outer-month">31</div>
     <div class="day">1<span class="completed"></span></div>
     <div class="day">2<span class="completed"></span></div>
-    <div class="day">3</div>
-    <div class="day">4</div>
+    <div class="day">3<span class="completed"></span></div>
+    <div class="day">4<span class="completed"></span></div>
     <div class="day">5</div>
     <div class="day">6</div>
     <div class="day">7</div>
