--- a/cold-showers.html
+++ b/cold-showers.html
@@ -62,7 +62,7 @@ permalink: /cold-showers/
     <div class="day">2<span class="completed"></span></div>
     <div class="day">3<span class="completed"></span></div>
     <div class="day">4<span class="completed"></span></div>
-    <div class="day">5</div>
+    <div class="day">5<span class="completed"></span></div>
     <div class="day">6</div>
     <div class="day">7</div>
     <div class="day">8</div>
