--- a/cold-showers.html
+++ b/cold-showers.html
@@ -63,8 +63,8 @@ permalink: /cold-showers/
     <div class="day">3<span class="completed"></span></div>
     <div class="day">4<span class="completed"></span></div>
     <div class="day">5<span class="completed"></span></div>
-    <div class="day">6</div>
-    <div class="day">7</div>
+    <div class="day">6<span class="completed"></span></div>
+    <div class="day">7<span class="completed"></span></div>
     <div class="day">8</div>
     <div class="day">9</div>
     <div class="day">10</div>
