completed days 8 and 9

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -65,8 +65,8 @@ permalink: /cold-showers/
     <div class="day">5<span class="completed"></span></div>
     <div class="day">6<span class="completed"></span></div>
     <div class="day">7<span class="completed"></span></div>
-    <div class="day">8</div>
-    <div class="day">9</div>
+    <div class="day">8<span class="completed"></span></div>
+    <div class="day">9<span class="completed"></span></div>
     <div class="day">10</div>
     <div class="day">11</div>
     <div class="day">12</div>
