Fill in missing completed cold showers

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -67,10 +67,10 @@ permalink: /cold-showers/
     <div class="day">7<span class="completed"></span></div>
     <div class="day">8<span class="completed"></span></div>
     <div class="day">9<span class="completed"></span></div>
-    <div class="day">10</div>
-    <div class="day">11</div>
-    <div class="day">12</div>
-    <div class="day">13</div>
+    <div class="day">10<span class="completed"></span></div>
+    <div class="day">11<span class="completed"></span></div>
+    <div class="day">12<span class="completed"></span></div>
+    <div class="day">13<span class="completed"></span></div>
     <div class="day">14</div>
     <div class="day">15</div>
     <div class="day">16</div>
