Completed two weeks of cold showers

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -71,7 +71,7 @@ permalink: /cold-showers/
     <div class="day">11<span class="completed"></span></div>
     <div class="day">12<span class="completed"></span></div>
     <div class="day">13<span class="completed"></span></div>
-    <div class="day">14</div>
+    <div class="day">14<span class="completed"></span></div>
     <div class="day">15</div>
     <div class="day">16</div>
     <div class="day">17</div>
