--- a/cold-showers.html
+++ b/cold-showers.html
@@ -72,12 +72,12 @@ permalink: /cold-showers/
     <div class="day">12<span class="completed"></span></div>
     <div class="day">13<span class="completed"></span></div>
     <div class="day">14<span class="completed"></span></div>
-    <div class="day">15</div>
-    <div class="day">16</div>
-    <div class="day">17</div>
-    <div class="day">18</div>
+    <div class="day">15<span class="completed"></span></div>
+    <div class="day">16<span class="completed"></span></div>
+    <div class="day">17<span class="completed"></span></div>
+    <div class="day">18<span class="completed"></span></div>
     <div class="day">19</div>
-    <div class="day">20</div>
+    <div class="day">20<span class="completed"></span></div>
     <div class="day">21</div>
     <div class="day">22</div>
     <div class="day">23</div>
