--- a/cold-showers.html
+++ b/cold-showers.html
@@ -78,11 +78,11 @@ permalink: /cold-showers/
     <div class="day">18<span class="completed"></span></div>
     <div class="day">19</div>
     <div class="day">20<span class="completed"></span></div>
-    <div class="day">21</div>
+    <div class="day">21<span class="completed"></span></div>
     <div class="day">22</div>
     <div class="day">23</div>
-    <div class="day">24</div>
-    <div class="day">25</div>
+    <div class="day">24<span class="completed"></span></div>
+    <div class="day">25<span class="completed"></span></div>
     <div class="day">26</div>
     <div class="day">27</div>
     <div class="day">28</div>
