Complete cold showers

--- a/cold-showers.html
+++ b/cold-showers.html
@@ -83,10 +83,10 @@ permalink: /cold-showers/
     <div class="day">23</div>
     <div class="day">24<span class="completed"></span></div>
     <div class="day">25<span class="completed"></span></div>
-    <div class="day">26</div>
-    <div class="day">27</div>
-    <div class="day">28</div>
-    <div class="day outer-month">1</div>
-    <div class="day outer-month">2</div>
+    <div class="day">26<span class="completed"></span></div>
+    <div class="day">27<span class="completed"></span></div>
+    <div class="day">28<span class="completed"></span></div>
+    <div class="day outer-month">1<span class="completed"></span></div>
+    <div class="day outer-month">2<span class="completed"></span></div>
   </div>
 </div>
