--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,14 @@ tags: contact
       <button type='submit' class="button button-blue button-big mobile-block">{{ site.text.contact.submit }}</button>
     </form>
   {% else %}
-    <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked">
+    <form action="https://formspree.io/mdoaagzn" method="POST" class="form-stacked">
       <label>
         Email
-        <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
+        <input type="text" name="_replyto" class="field-light" placeholder="{{ site.text.contact.email }}">
       </label>
       <label>
         Content
-        <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}" style="resize: vertical"></textarea>
+        <textarea type="text" name="message" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}" style="resize: vertical"></textarea>
       </label>
 
       <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks/" />
